--- a/suppharmacy/templates/base.html
+++ b/suppharmacy/templates/base.html
@@ -26,6 +26,7 @@
     {% block body %}
     <div class="container">
         {% block content %}
+            BIENVENIDO A SUPPHARMACY
         {% endblock %}
     </div>
     {% endblock body %}
