--- a/suppharmacy/templates/base.html
+++ b/suppharmacy/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'img/icons/favicon.ico' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
 
     <!-- CSS Libs -->
@@ -24,11 +24,9 @@
 </head>
 <body>
     {% block body %}
-    <div class="container">
         {% block content %}
             BIENVENIDO A SUPPHARMACY
         {% endblock %}
-    </div>
     {% endblock body %}
     
     <!-- CSRF Axios -->
