Se acomoda código del modulo de usuario y se agrega la vista principal

--- a/suppharmacy/templates/home.html
+++ b/suppharmacy/templates/home.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Suppharmacy{% endblock %}
 
 {% block content %}
 
@@ -15,7 +15,7 @@
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item">
-                <a href="#" class="nav-link text-white" aria-current="page">
+                <a href="/user" class="nav-link text-white" aria-current="page">
                     <svg class="bi bi-person-badge me-2 text-white" width="16" height="16">
                         <image xlink:href="{% static 'img/icons/person-badge.svg' %}"/>
                     </svg>
