--- a/suppharmacy/templates/base.html
+++ b/suppharmacy/templates/base.html
@@ -17,6 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- Vue JS -->
     <script src="https://unpkg.com/vue@3.2.47/dist/vue.global.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue3-sfc-loader/dist/vue3-sfc-loader.js"></script> -->
 
     <title>{% block title %}Home{% endblock %}</title>
 
