--- a/suppharmacy/templates/user/list.html
+++ b/suppharmacy/templates/user/list.html
@@ -6,17 +6,22 @@
 
 {% block view %}
 
-<div id="vue-list">
-    <div class="row" style="font-weight: bold;">
-        <div class="col-6">
-            Nombre
-        </div>
-        <div class="col-6">
-            Usuario
-        </div>
+<div id="vue-list" >
+    <div v-if="!loading">
+        CARGANDO DATOS
     </div>
-    <div>
-        <user-row v-for="user in users" :key="user.name" :user="user"></user-row>
+    <div v-else>
+        <div class="row" style="font-weight: bold;">
+            <div class="col-6">
+                Nombre
+            </div>
+            <div class="col-6">
+                Usuario
+            </div>
+        </div>
+        <div>
+            <user-row v-for="user in users" :key="user.id" :user="user"></user-row>
+        </div>
     </div>
 </div>
 
