Se cambian estilos en la vista de lista. Y se agrega url para hacer consulta de cualquier modelo

--- a/suppharmacy/static/css/base.css
+++ b/suppharmacy/static/css/base.css
@@ -27,3 +27,9 @@ html {
 image {
     fill: white !important;
 }
+
+table.list_view {
+    width: 100%;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
