--- a/suppharmacy/templates/home.html
+++ b/suppharmacy/templates/home.html
@@ -36,8 +36,8 @@
           </ul>
         </div>
     </div>
-    <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-white" style="width: 85%;">
-        <div class="container">
+    <div class="d-flex flex-column flex-shrink-0 text-bg-white" style="width: 85%;">
+        <div class="container" style="padding: 0!important;">
             {% block view %}
                 BIENVENIDO AL SISTEMA
             {% endblock %}
