--- a/suppharmacy/static/css/base.css
+++ b/suppharmacy/static/css/base.css
@@ -33,3 +33,23 @@ table.list_view {
     border-top: 1px solid black;
     border-bottom: 1px solid black;
 }
+
+.loading {
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    background-color: grey;
+    opacity: 0.5;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.loading div:first-child {
+    margin-left: 25;
+}
+
+.loading div {
+    opacity: 1;
+    color: black;
+}
