--- a/suppharmacy/templates/user/list.html
+++ b/suppharmacy/templates/user/list.html
@@ -7,22 +7,30 @@
 {% block view %}
 
 <div id="vue-list" >
-    <div v-if="!loading">
-        CARGANDO DATOS
+    <div v-if="loading" class="loading d-flex flex-column flex-wrap align-content-center justify-content-center">
+        <div class="spinner-border text-light" role="status">
+            <span class="visually-hidden"></span>
+        </div>
+        <div>
+            Cargando...
+        </div>
     </div>
-    <div v-else>
-        <table class="table table-striped list_view" >
-            <thead class="text-bg-dark">
-                <tr>
-                    <th>Nombre</th>
-                    <th>Usuario</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr is="vue:user-row" v-for="user in users" :key="user.id" :user="user"></tr>
-            </tbody>
-        </table>
+    <div class="row m-3">
+        <div class="col-12 text-center">
+            <!-- Filtros -->
+        </div>
     </div>
+    <table class="table table-striped list_view" >
+        <thead class="text-bg-dark">
+            <tr>
+                <th>Nombre</th>
+                <th>Usuario</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr is="vue:user-row" v-for="user in users" :key="user.id" :user="user"></tr>
+        </tbody>
+    </table>
 </div>
 
 {% endblock %}
