Se agrega scroll vertical a la tabla

--- a/suppharmacy/static/css/base.css
+++ b/suppharmacy/static/css/base.css
@@ -28,6 +28,11 @@ image {
     fill: white !important;
 }
 
+.table-wrapper {
+    max-height: 85vh;
+    overflow: auto;
+}
+
 table.list_view {
     width: 100%;
     border-top: 1px solid black;
