Se agrega la vista de formulario del usuario

--- a/suppharmacy/templates/user/list.html
+++ b/suppharmacy/templates/user/list.html
@@ -52,6 +52,13 @@
         <table class="table table-striped list_view table-reponsive" >
             <thead class="text-bg-dark sticky-top">
                 <tr>
+                    <th style="width: 20px;">
+                        <a href="user/0">
+                            <svg class="bi bi bi-plus-square me-2" width="16" height="16">
+                                <image xlink:href="{% static 'img/icons/plus-square.svg' %}"/>
+                            </svg>
+                        </a>
+                    </th>
                     <th>Nombre</th>
                     <th>Usuario</th>
                 </tr>
