--- a/suppharmacy/templates/user/form.html
+++ b/suppharmacy/templates/user/form.html
@@ -6,10 +6,48 @@
 
 {% block view %}
 
-
+<div id="vue-form" rec-id="{{id}}">
+    <loading :loading="loading"></loading>
+    <!-- Header -->
+    <div class="row m-3 sticky-top bg-body">
+        <div class="col-3">
+            <button type="button" class="btn btn-info m-1" @click="save">
+                <span v-if="user.id != 0">Guardar</span>
+                <span v-else>Crear</span>
+            </button>
+            <a href="#" class="btn btn-outline-info m-1" @click="discard">Descartar</a>
+        </div>
+    </div>
+    <!-- Body -->
+    <div class="row">
+        <div class="col-6">
+            <div class="input-group m-3">
+                <span class="input-group-text">Nombre</span>
+                <input class="form-control" type="text" v-model="user.name"/>
+            </div>
+            <div class="input-group m-3">
+                <span class="input-group-text">Usuario</span>
+                <input class="form-control" type="text" v-model="user.username"/>
+            </div>
+            <div class="input-group m-3">
+                <span class="input-group-text">Contraseña</span>
+                <input class="form-control" type="password" v-model="user.password" :disabled="user.id != 0"/>
+                <button v-if="user.id != 0" class="btn btn-outline-secondary" type="button" @click="updatePassword">Actualizar</button>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="input-group m-3">
+                <span class="input-group-text">Activo</span>
+                <div class="input-group-text">
+                    <input class="form-check-input mt-0" type="checkbox" v-model="user.active" >
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
 
 {% block javascript-view %}
-<!-- <script src="{% static 'js/user/list.js' %}"></script> -->
+<script src="{% static 'js/user/form.js' %}"></script>
 {% endblock %}
