Se genera modal para cambio de contraseña del usuario

--- a/suppharmacy/static/css/base.css
+++ b/suppharmacy/static/css/base.css
@@ -66,3 +66,8 @@ table.list_view {
     height: -webkit-fill-available;
     max-height: 100vh;
 }
+
+#vue-form div.modal {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.5);
+}
