--- a/suppharmacy/templates/user/form.html
+++ b/suppharmacy/templates/user/form.html
@@ -45,6 +45,21 @@
                     <input class="form-check-input mt-0" type="checkbox" v-model="user.active" >
                 </div>
             </div>
+            <field-relational
+                v-if="user.id"
+                string="Usuarios"
+                field="name"
+                table="user"
+                :initial="user.id"
+                @value-changed="userChange"
+            ></field-relational>
+            <field-relational
+                v-else=""
+                string="Usuarios"
+                field="name"
+                table="user"
+                @value-changed="userChange"
+            ></field-relational>
         </div>
     </div>
 </div>
