--- a/suppharmacy/templates/user/list.html
+++ b/suppharmacy/templates/user/list.html
@@ -59,6 +59,7 @@
                             </svg>
                         </a>
                     </th>
+                    <th style="width: 20px;"></th>
                     <th>Nombre</th>
                     <th>Usuario</th>
                 </tr>
