Se agrega vista de lista y formulario para la tabla de laboratorio

--- a/suppharmacy/templates/home.html
+++ b/suppharmacy/templates/home.html
@@ -23,6 +23,14 @@
                     Usuarios
                 </a>
             </li>
+            <li class="nav-item">
+                <a href="/laboratory" class="nav-link text-white" aria-current="page">
+                    <!-- <svg class="bi bi-person-badge me-2 text-white" width="16" height="16">
+                        <image xlink:href="{% static 'img/icons/person-badge.svg' %}"/>
+                    </svg> -->
+                    Laboratorio
+                </a>
+            </li>
         </ul>
         <hr>
         <div class="dropdown">
