Se agrega ordenamiento de las vistas de lista

--- a/suppharmacy/templates/laboratory/list.html
+++ b/suppharmacy/templates/laboratory/list.html
@@ -60,7 +60,7 @@
                         </a>
                     </th>
                     <th style="width: 20px;"></th>
-                    <th>Nombre</th>
+                    <th :class="orderFieldClass.name" @click="changeOrder('name')">Nombre</th>
                 </tr>
             </thead>
             <tbody>
