Se agregan clases css para el orden en las vista de lista

--- a/suppharmacy/static/css/base.css
+++ b/suppharmacy/static/css/base.css
@@ -79,3 +79,15 @@ table.list_view {
 #vue-form .row {
     margin-right: 0;
 }
+
+.dropdown::after {
+    content: "\2b9f";
+    color: white;
+    font-family: sans-serif;
+}
+
+.dropup::after {
+    content: "\2b9d";
+    color: white;
+    font-family: sans-serif;
+}
