Cambios pequeños de estilos, todas las librerias de js y css se importan desde la misma app

--- a/suppharmacy/static/css/main.css
+++ b/suppharmacy/static/css/main.css
@@ -93,3 +93,7 @@ th.dropup::after {
     font-family: sans-serif;
     font-size: 12px;
 }
+
+.input-group-date {
+    flex-wrap: nowrap !important;
+}
