--- a/suppharmacy/templates/laboratory/list.html
+++ b/suppharmacy/templates/laboratory/list.html
@@ -17,11 +17,8 @@
                     @change="fetchLabs()"/>
             </div>
         </div>
-        <div class="col-6">
-            
-        </div>
         <!-- Pagination -->
-        <div class="col-3">
+        <div class="col-3 ms-auto">
             <nav>
                 <ul class="pagination justify-content-end">
                     <li class="page-item" :class="paginationEnableClass">
