--- a/suppharmacy/templates/base.html
+++ b/suppharmacy/templates/base.html
@@ -4,20 +4,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="{% static 'img/icons/favicon.ico' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
     <!-- CSS Libs -->
     <!-- Boostrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-        rel="stylesheet"integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/lib/bootstrap.css' %}"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD">
+   <!-- Vue Datepicker -->
+    <link rel="stylesheet" href="{% static 'css/lib/vuejs-datepicker.css' %}">
 
     <!-- JS Libs  -->
     <!-- Axios -->
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="{% static 'js/lib/axios.js' %}"></script>
     <!-- Vue JS -->
-    <script src="https://unpkg.com/vue@3.2.47/dist/vue.global.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/vue3-sfc-loader/dist/vue3-sfc-loader.js"></script> -->
+    <script src="{% static 'js/lib/vue.js' %}"></script>
+    <!-- Moment JS -->
+    <script src="{% static 'js/lib/moment.js' %}"></script>
+    <!-- Vue Datepicker -->
+    <script src="{% static 'js/lib/vuejs-datepicker.js' %}"></script>
 
     <title>{% block title %}Home{% endblock %}</title>
 
@@ -39,8 +43,7 @@
     {% block javascript %}{% endblock %}
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+    <script src="{% static 'js/lib/bootstrap.js' %}"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"></script>
 </body>
 </html>
