Cambios pequeños de estilos

--- a/suppharmacy/templates/laboratory/form.html
+++ b/suppharmacy/templates/laboratory/form.html
@@ -17,7 +17,7 @@
             </button>
             <a href="#" class="btn btn-outline-info m-1" @click="discard">Descartar</a>
         </div>
-        <div class="col-1 offset-8">
+        <div class="col-1 ms-auto">
             <a v-if="laboratory.id != 0" href="#" class="btn btn-danger m-1" @click="deleteLaboratory">Borrar</a>
         </div>
     </div>
