--- a/suppharmacy/templates/user/form.html
+++ b/suppharmacy/templates/user/form.html
@@ -18,7 +18,7 @@
             </button>
             <a href="#" class="btn btn-outline-info m-1" @click="discard">Descartar</a>
         </div>
-        <div class="col-1 offset-8">
+        <div class="col-1 ms-auto">
             <a v-if="user.id != 0" href="#" class="btn btn-danger m-1" @click="deleteUser">Borrar</a>
         </div>
     </div>
