Se agrega estilo para las vistas de formulario

--- a/suppharmacy/static/css/main.css
+++ b/suppharmacy/static/css/main.css
@@ -97,3 +97,11 @@ th.dropup::after {
 .input-group-date {
     flex-wrap: nowrap !important;
 }
+
+.form-header {
+    height: 5vh !important;
+}
+
+.form-body {
+    height: 90vh !important;
+}
