Se agrega las vistas de partner y se pequeñas mejoras en los estilos

--- a/suppharmacy/templates/laboratory/form.html
+++ b/suppharmacy/templates/laboratory/form.html
@@ -9,7 +9,7 @@
 <div id="vue-form" rec-id="{{id}}">
     <loading :loading="loading"></loading>
     <!-- Header -->
-    <div class="row m-3 sticky-top bg-body form-header">
+    <div class="row sticky-top bg-body form-header">
         <div class="col-3">
             <button type="button" class="btn btn-info m-1" @click="save">
                 <span v-if="laboratory.id != 0">Guardar</span>
