--- a/suppharmacy/templates/user/form.html
+++ b/suppharmacy/templates/user/form.html
@@ -10,7 +10,7 @@
     <loading :loading="loading"></loading>
     <modal-password :visible="modalPassword"></modal-password>
     <!-- Header -->
-    <div class="row m-3 sticky-top bg-body form-header">
+    <div class="row sticky-top bg-body form-header">
         <div class="col-3">
             <button type="button" class="btn btn-info m-1" @click="save">
                 <span v-if="user.id != 0">Guardar</span>
