--- a/suppharmacy/templates/home.html
+++ b/suppharmacy/templates/home.html
@@ -24,6 +24,14 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a href="/partner" class="nav-link text-white" aria-current="page">
+                    <svg class="bi bi-person-badge me-2 text-white" width="16" height="16">
+                        <image xlink:href="{% static 'img/icons/person-badge.svg' %}"/>
+                    </svg>
+                    Clientes/Proveedores
+                </a>
+            </li>
+            <li class="nav-item">
                 <a href="/laboratory" class="nav-link text-white" aria-current="page">
                     <!-- <svg class="bi bi-person-badge me-2 text-white" width="16" height="16">
                         <image xlink:href="{% static 'img/icons/person-badge.svg' %}"/>
