Se agregan las vistas de Producto

--- a/suppharmacy/templates/laboratory/form.html
+++ b/suppharmacy/templates/laboratory/form.html
@@ -23,7 +23,7 @@
     </div>
     <!-- Body -->
     <div class="form-body">
-        <div class="form-body">
+        <div class="row">
             <div class="col-6">
                 <div class="input-group m-3">
                     <span class="input-group-text">Nombre</span>
