Se agrega atributo a los campos calculados en la vista de formulario

--- a/suppharmacy/templates/sale/form.html
+++ b/suppharmacy/templates/sale/form.html
@@ -92,11 +92,11 @@
             <div class="col-3 ms-auto">
                 <div class="input-group m-3">
                     <span class="input-group-text">Subtotal</span>
-                    <input class="form-control" type="text" v-model="sale.amount_untaxed"/>
+                    <input class="form-control" type="text" v-model="sale.amount_untaxed" disabled/>
                 </div>
                 <div class="input-group m-3">
                     <span class="input-group-text">Total</span>
-                    <input class="form-control" type="text" v-model="sale.amount_total"/>
+                    <input class="form-control" type="text" v-model="sale.amount_total" disabled/>
                 </div>
             </div>
         </div>
