--- a/suppharmacy/templates/home.html
+++ b/suppharmacy/templates/home.html
@@ -52,7 +52,15 @@
                     <!-- <svg class="bi bi-person-badge me-2 text-white" width="16" height="16">
                         <image xlink:href="{% static 'img/icons/person-badge.svg' %}"/>
                     </svg> -->
-                    Laboratorio
+                    Laboratorios
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/drug-category" class="nav-link text-white" aria-current="page">
+                    <svg class="bi bi-person-badge me-2 text-white" width="16" height="16">
+                        <image xlink:href="{% static 'img/icons/tag-fill.svg' %}"/>
+                    </svg>
+                    Categorías
                 </a>
             </li>
         </ul>
