Se agregan las vistas de lista y formulario para la tabla de stock_picking

--- a/suppharmacy/templates/home.html
+++ b/suppharmacy/templates/home.html
@@ -32,6 +32,14 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a href="/stock" class="nav-link text-white" aria-current="page">
+                    <!-- <svg class="bi bi-person-badge me-2 text-white" width="16" height="16">
+                        <image xlink:href="{% static 'img/icons/receipt.svg' %}"/>
+                    </svg> -->
+                    Movimientos Inventario
+                </a>
+            </li>
+            <li class="nav-item">
                 <a href="/user" class="nav-link text-white" aria-current="page">
                     <svg class="bi bi-person-badge me-2 text-white" width="16" height="16">
                         <image xlink:href="{% static 'img/icons/person-badge.svg' %}"/>
