Se agrega los nombres de los estados a las vista de lista y formulario

--- a/suppharmacy/templates/purchase/form.html
+++ b/suppharmacy/templates/purchase/form.html
@@ -18,7 +18,7 @@
             <a href="#" class="btn btn-outline-info m-1" @click="discard">Descartar</a>
         </div>
         <div class="col-1 ms-auto text-center fs-4">
-            <span class="badge text-bg-secondary">Estado</span>
+            <span class="badge text-bg-secondary">[[ nameState ]]</span>
         </div>
         <div class="col-1">
             <a v-if="purchase.id != 0" href="#" class="btn btn-danger m-1" @click="deletePurchase">Borrar</a>
