--- a/suppharmacy/templates/picking/list.html
+++ b/suppharmacy/templates/picking/list.html
@@ -51,6 +51,19 @@
                 </date-picker>
             </div>
         </div>
+        <div class="col-2">
+            <div class="input-group">
+                <span class="input-group-text">Estado</span>
+                <select class="form-control" v-model="stateFilter"
+                    @change="fetchPickings()">
+                    <option value=""></option>
+                    <option value="draft">Borrador</option>
+                    <option value="ready">Preparado</option>
+                    <option value="done">Hecho</option>
+                    <option value="cancel">Cancelado</option>
+                </select>
+            </div>
+        </div>
         <!-- Pagination -->
         <div class="col-3 ms-auto">
             <nav>
