Se agrega campo de numero de lote en purchase.order.line y stock.move

--- a/suppharmacy/templates/picking/form.html
+++ b/suppharmacy/templates/picking/form.html
@@ -76,8 +76,8 @@
                         </th>
                         <th style="width: 2%;"></th>
                         <th style="width: 32%;">Producto</th>
+                        <th style="width: 32%;">Lote</th>
                         <th style="width: 32%;">Cantidad</th>
-                        <th style="width: 32%;">Cantidad Hecha</th>
                     </tr>
                 </thead>
                 <tbody style="height: 50vh; overflow-y: auto; display: block;">
