--- a/suppharmacy/templates/purchase/form.html
+++ b/suppharmacy/templates/purchase/form.html
@@ -75,12 +75,13 @@
                             </a>
                         </th>
                         <th style="width: 2%;"></th>
-                        <th style="width: 16%;">Producto</th>
-                        <th style="width: 16%;">Cantidad</th>
-                        <th style="width: 16%;">Precio Unitario</th>
-                        <th style="width: 16%;">Impuesto</th>
-                        <th style="width: 16%;">Subtotal</th>
-                        <th style="width: 16%;">Total</th>
+                        <th style="width: 15%;">Producto</th>
+                        <th style="width: 16%;">Lote</th>
+                        <th style="width: 13%;">Cantidad</th>
+                        <th style="width: 13%;">Precio Unitario</th>
+                        <th style="width: 13%;">Impuesto</th>
+                        <th style="width: 13%;">Subtotal</th>
+                        <th style="width: 13%;">Total</th>
                     </tr>
                 </thead>
                 <tbody style="height: 50vh; overflow-y: auto; display: block;">
